--- a/index.html
+++ b/index.html
@@ -542,7 +542,16 @@
        }]
    }
 </script>
-</head><body>        <script type="text/javascript">
+</head><body>   
+	 <div style="text-align: center;">
+        <a href="./CellPhonescreenrepairinCarlePlace.html">CellPhone Screen Repair in Carle-Place</a>&nbsp&nbsp
+        <a href="./TabletBrokenscreenrepairinCarlePlace.html">Tablet Broken Screen Repair in Carle-Place</a>&nbsp&nbsp
+        <a href="./iPadBrokenscreenrepairinCarlePlace.html">iPad Broken Screen Repair in Carle-Place</a>&nbsp&nbsp
+
+        <a href="./iPhonebrokenscreenrepairinCarlePlace.html">iPhone Broken Screen Repair in Carle-Place</a>
+    </div><br/>
+	
+	<script type="text/javascript">
     		  function openWindow(event) {
             // Show the popup
             var my_window;
